add_subdirectory(featuremodule)
set_property(TARGET featuremodule PROPERTY FOLDER "module")

add_subdirectory(layermodule)
set_property(TARGET layermodule PROPERTY FOLDER "module")

add_subdirectory(mapmodule)
set_property(TARGET mapmodule PROPERTY FOLDER "module")

add_subdirectory(modelmodule)
set_property(TARGET modelmodule PROPERTY FOLDER "module")

add_subdirectory(mouseeventmodule)
set_property(TARGET mouseeventmodule PROPERTY FOLDER "module")

add_subdirectory(nodemodule)
set_property(TARGET nodemodule PROPERTY FOLDER "module")

add_subdirectory(viewermodule)
set_property(TARGET viewermodule PROPERTY FOLDER "module")




