add_subdirectory(appskeletonplugin)
set_property(TARGET appskeletonplugin PROPERTY FOLDER "plugin")
add_subdirectory(plugina)
set_property(TARGET plugina PROPERTY FOLDER "plugin")
add_subdirectory(pluginb)
set_property(TARGET pluginb PROPERTY FOLDER "plugin")

add_subdirectory(detectshowplugin)
set_property(TARGET detectshowplugin PROPERTY FOLDER "plugin")
add_subdirectory(earthwidgetplugin)
set_property(TARGET earthwidgetplugin PROPERTY FOLDER "plugin")
add_subdirectory(gridctrlplugin)
set_property(TARGET gridctrlplugin PROPERTY FOLDER "plugin")
add_subdirectory(modelbuildplugin)
set_property(TARGET modelbuildplugin PROPERTY FOLDER "plugin")
add_subdirectory(mousepointinfoplugin)
set_property(TARGET mousepointinfoplugin PROPERTY FOLDER "plugin")
add_subdirectory(scutcheonplugin)
set_property(TARGET scutcheonplugin PROPERTY FOLDER "plugin")
add_subdirectory(simulationplugin)
set_property(TARGET simulationplugin PROPERTY FOLDER "plugin")
add_subdirectory(weatherplugin)
set_property(TARGET weatherplugin PROPERTY FOLDER "plugin")